--- a/src/Hero.css
+++ b/src/Hero.css
@@ -427,7 +427,7 @@ section.contact-location-details {
         background-color: rgb(21, 21,21);
         z-index: 0;
         height: calc(var(--vh) * 26.4);
-        /* pointer-events: none; */
+        pointer-events:all;
         /* height: calc(var(--vh) * 28); */
         /* margin-block-end: calc(var(--vh) * 4.4); */
     }
